# read-metadata

./: Cargo.toml
src/: main.rs
