[package]
name = "read-metadata"
version = "0.1.0"
authors = ["soyuka <soyuka@gmail>"]

[dependencies]
clap = "^2.31.2"
reqwest = "^0.8.6"
bytes = "^0.4.8"
log = "^0.4.0"
env_logger = "^0.5.10"
error-chain = "^0.11.0"
scraper = "0.7.0"
serde_json = "^1.0.0"
serde = "^1.0.66"
serde_derive = "^1.0.66"
url = "^1.7.0"
